[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<6.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "psycopg[binary]>=3.3.3",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "django-extensions>=4.1",
    "ruff>=0.15.12",
]
